--- a/cobigen/cobigen-core-parent/cobigen-core-test/pom.xml
+++ b/cobigen/cobigen-core-parent/cobigen-core-test/pom.xml
@@ -6,6 +6,7 @@
   <name>CobiGen Core - Test</name>
   <version>${cobigencore.version}</version>
   <packaging>jar</packaging>
+  <description>Code-based incremental generator - Test Utils</description>
 
   <parent>
     <groupId>com.devonfw.cobigen</groupId>
