--- a/cobigen/cobigen-templateengines/cobigen-tempeng-freemarker/pom.xml
+++ b/cobigen/cobigen-templateengines/cobigen-tempeng-freemarker/pom.xml
@@ -22,12 +22,12 @@
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>core-api</artifactId>
-      <version>4.3.0-SNAPSHOT</version>
+      <version>5.0.0</version>
     </dependency>
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>core-test</artifactId>
-      <version>4.3.0-SNAPSHOT</version>
+      <version>5.0.0</version>
       <scope>test</scope>
     </dependency>
 
