--- a/cobigen/pom.xml
+++ b/cobigen/pom.xml
@@ -22,7 +22,7 @@
     <module>cobigen-senchaplugin</module>
     <module>cobigen-htmlplugin</module>
     <module>cobigen-tsplugin</module>
-    <module>cobigen-openapiplugin</module>
+    <module>cobigen-openapiplugin-parent</module>
     <module>cobigen-templateengines</module>
   </modules>
 
