--- a/cobigen/cobigen-openapiplugin-parent/cobigen-openapiplugin/pom.xml
+++ b/cobigen/cobigen-openapiplugin-parent/cobigen-openapiplugin/pom.xml
@@ -17,6 +17,12 @@
   </properties>
 
   <dependencies>
+  <dependency>
+      <groupId>com.devonfw.cobigen</groupId>
+      <artifactId>openapiplugin-model</artifactId>
+      <version>1.7.0-SNAPSHOT</version>
+    </dependency>
+    
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>core-api</artifactId>
