--- a/cobigen/cobigen-openapiplugin-parent/pom.xml
+++ b/cobigen/cobigen-openapiplugin-parent/pom.xml
@@ -1,21 +1,25 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.devonfw</groupId>
+  <groupId>com.devonfw.cobigen</groupId>
   <artifactId>openapiplugin-parent</artifactId>
   <version>dev-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>CobiGen Openapiplugin Parent</name>
 
   <parent>
-    <groupId>com.capgemini</groupId>
-    <artifactId>cobigen-parent</artifactId>
+    <groupId>com.devonfw.cobigen</groupId>
+    <artifactId>parent</artifactId>
     <version>dev-SNAPSHOT</version>
   </parent>
 
   <modules>
-    <module>openapiplugin</module>
-    <module>openapiplugin-model</module>
+    <module>cobigen-openapiplugin</module>
+    <module>cobigen-openapiplugin-model</module>
   </modules>
+  
+  <properties>
+    <skip.deployment>false</skip.deployment>
+  </properties>
 
 </project>
