--- a/cobigen/cobigen-openapiplugin-parent/cobigen-openapiplugin-model/pom.xml
+++ b/cobigen/cobigen-openapiplugin-parent/cobigen-openapiplugin-model/pom.xml
@@ -15,5 +15,13 @@
   <properties>
     <skip.deployment>false</skip.deployment>
   </properties>
+  
+  <dependencies>
+    <dependency>
+      <groupId>com.reprezen.kaizen</groupId>
+      <artifactId>openapi-parser</artifactId>
+      <version>2.1.1-201803281732</version>
+    </dependency>
+  </dependencies>
 
 </project>
