--- a/cobigen/cobigen-templateengines/cobigen-tempeng-freemarker/pom.xml
+++ b/cobigen/cobigen-templateengines/cobigen-tempeng-freemarker/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>tempeng-freemarker</artifactId>
   <name>CobiGen - FreeMarker Template Engine</name>
-  <version>2.0.0-SNAPSHOT</version>
+  <version>2.0.0</version>
   <packaging>jar</packaging>
 
   <parent>
