--- a/cobigen/cobigen-templateengines/cobigen-tempeng-freemarker/pom.xml
+++ b/cobigen/cobigen-templateengines/cobigen-tempeng-freemarker/pom.xml
@@ -6,6 +6,7 @@
   <name>CobiGen - FreeMarker Template Engine</name>
   <version>1.0.0</version>
   <packaging>jar</packaging>
+  <description>CobiGen - FreeMarker Template Engine</description>
 
   <parent>
     <groupId>com.capgemini</groupId>
