--- a/cobigen/cobigen-javaplugin-parent/cobigen-javaplugin/pom.xml
+++ b/cobigen/cobigen-javaplugin-parent/cobigen-javaplugin/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>javaplugin</artifactId>
   <name>CobiGen - Java Plug-in</name>
-  <version>1.7.0-SNAPSHOT</version>
+  <version>2.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <parent>
@@ -22,31 +22,31 @@
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>javaplugin-model</artifactId>
-      <version>1.7.0-SNAPSHOT</version>
+      <version>2.0.0-SNAPSHOT</version>
     </dependency>
 
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>core-api</artifactId>
-      <version>4.3.0-SNAPSHOT</version>
+      <version>5.0.0</version>
     </dependency>
 
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>core-test</artifactId>
-      <version>4.3.0-SNAPSHOT</version>
+      <version>5.0.0</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>core</artifactId>
-      <version>4.3.0-SNAPSHOT</version>
+      <version>5.0.0</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>tempeng-freemarker</artifactId>
-      <version>1.0.1-SNAPSHOT</version>
+      <version>2.0.0</version>
       <scope>test</scope>
     </dependency>
 
