#656 fixed dependency version declaration to make it compatible for automatic processing + added project descriptions for OSS release

--- a/cobigen/cobigen-javaplugin-parent/cobigen-javaplugin-model/pom.xml
+++ b/cobigen/cobigen-javaplugin-parent/cobigen-javaplugin-model/pom.xml
@@ -5,6 +5,7 @@
   <version>2.0.0-SNAPSHOT</version>
   <name>CobiGen Javaplugin Model</name>
   <packaging>jar</packaging>
+  <description>CobiGen - Java Plug-in Model</description>
 
   <parent>
     <groupId>com.devonfw.cobigen</groupId>
