--- a/cobigen/cobigen-javaplugin-parent/cobigen-javaplugin/pom.xml
+++ b/cobigen/cobigen-javaplugin-parent/cobigen-javaplugin/pom.xml
@@ -6,6 +6,7 @@
   <name>CobiGen - Java Plug-in</name>
   <version>2.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
+  <description>CobiGen - Java Plug-in</description>
 
   <parent>
     <groupId>com.devonfw.cobigen</groupId>
@@ -20,9 +21,9 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.devonfw.cobigen</groupId>
+      <groupId>${project.groupId}</groupId>
       <artifactId>javaplugin-model</artifactId>
-      <version>2.0.0-SNAPSHOT</version>
+      <version>${project.version}</version>
     </dependency>
 
     <dependency>
