--- a/cobigen/cobigen-jsonplugin/pom.xml
+++ b/cobigen/cobigen-jsonplugin/pom.xml
@@ -3,8 +3,9 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>jsonplugin</artifactId>
   <name>CobiGen - JSON Plug-in</name>
-  <version>1.2.1-SNAPSHOT</version>
+  <version>2.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
+  <description>CobiGen - JSON Plug-in</description>
 
   <parent>
     <groupId>com.devonfw.cobigen</groupId>
@@ -20,12 +21,12 @@
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>core-api</artifactId>
-      <version>4.3.0-SNAPSHOT</version>
+      <version>5.0.0</version>
     </dependency>
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>core-test</artifactId>
-      <version>4.3.0-SNAPSHOT</version>
+      <version>5.0.0</version>
       <scope>test</scope>
     </dependency>
     <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
