--- a/cobigen/cobigen-propertyplugin/pom.xml
+++ b/cobigen/cobigen-propertyplugin/pom.xml
@@ -1,11 +1,11 @@
-
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <artifactId>propertyplugin</artifactId>
   <packaging>jar</packaging>
-  <version>1.2.1-SNAPSHOT</version>
+  <version>2.0.0-SNAPSHOT</version>
   <name>CobiGen - Property File Plug-In</name>
+  <description>CobiGen - Property File Plug-In</description>
 
   <parent>
     <groupId>com.devonfw.cobigen</groupId>
@@ -21,14 +21,14 @@
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>core-api</artifactId>
-      <version>4.3.0-SNAPSHOT</version>
+      <version>5.0.0</version>
     </dependency>
     
     <!-- Test dependencies -->
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>core-test</artifactId>
-      <version>4.3.0-SNAPSHOT</version>
+      <version>5.0.0</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -37,7 +37,5 @@
       <version>2.4</version>
       <scope>test</scope>
     </dependency>
-
   </dependencies>
-
 </project>
