--- a/cobigen/cobigen-textmerger/pom.xml
+++ b/cobigen/cobigen-textmerger/pom.xml
@@ -3,8 +3,9 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>textmerger</artifactId>
   <packaging>jar</packaging>
-  <version>1.2.1-SNAPSHOT</version>
-  <name>CobiGen - Text Merger</name>
+  <version>2.0.0-SNAPSHOT</version>
+  <name>CobiGen - Text Merger Plug-in</name>
+  <description>CobiGen - Text Merger Plug-in</description>
 
   <parent>
     <groupId>com.devonfw.cobigen</groupId>
@@ -20,7 +21,7 @@
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>core-api</artifactId>
-      <version>4.3.0-SNAPSHOT</version>
+      <version>5.0.0</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
     <dependency>
