--- a/cobigen/cobigen-xmlplugin/pom.xml
+++ b/cobigen/cobigen-xmlplugin/pom.xml
@@ -4,8 +4,9 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>xmlplugin</artifactId>
   <name>CobiGen - XML Plug-In</name>
-  <version>3.2.0-SNAPSHOT</version>
+  <version>4.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
+  <description>CobiGen - XML Plug-In</description>
 
   <parent>
     <groupId>com.devonfw.cobigen</groupId>
@@ -22,35 +23,32 @@
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>core-api</artifactId>
-      <version>4.3.0-SNAPSHOT</version>
+      <version>5.0.0</version>
     </dependency>
-    <dependency>
-      <groupId>com.devonfw.cobigen</groupId>
-      <artifactId>core-test</artifactId>
-      <version>4.3.0-SNAPSHOT</version>
-      <scope>test</scope>
-    </dependency>
-    
-    <!-- Just for systemtests to allow usage of CobiGen -->
-    <dependency>
-      <groupId>com.devonfw.cobigen</groupId>
-      <artifactId>core</artifactId>
-      <version>4.3.0-SNAPSHOT</version>
-      <scope>test</scope>
-    </dependency>
-    
-    <dependency>
-      <groupId>com.devonfw.cobigen</groupId>
-      <artifactId>tempeng-freemarker</artifactId>
-      <version>1.0.1-SNAPSHOT</version>
-      <scope>test</scope>
-    </dependency>
-
     <dependency>
       <artifactId>lexeme</artifactId>
       <groupId>com.github.maybeec</groupId>
       <version>1.0.0</version>
     </dependency>
-    
+
+    <dependency>
+      <groupId>com.devonfw.cobigen</groupId>
+      <artifactId>core-test</artifactId>
+      <version>5.0.0</version>
+      <scope>test</scope>
+    </dependency>
+    <!-- Just for systemtests to allow usage of CobiGen -->
+    <dependency>
+      <groupId>com.devonfw.cobigen</groupId>
+      <artifactId>core</artifactId>
+      <version>5.0.0</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.devonfw.cobigen</groupId>
+      <artifactId>tempeng-freemarker</artifactId>
+      <version>2.0.0</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
