--- a/cobigen/cobigen-openapiplugin-parent/cobigen-openapiplugin-model/pom.xml
+++ b/cobigen/cobigen-openapiplugin-parent/cobigen-openapiplugin-model/pom.xml
@@ -2,9 +2,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <artifactId>openapiplugin-model</artifactId>
-  <version>1.7.0-SNAPSHOT</version>
+  <version>2.0.0-SNAPSHOT</version>
   <name>CobiGen Openapiplugin Model</name>
   <packaging>jar</packaging>
+  <description>CobiGen - OpenAPI Plug-in Model</description>
 
   <parent>
     <groupId>com.devonfw.cobigen</groupId>
