--- a/cobigen/cobigen-openapiplugin-parent/cobigen-openapiplugin/pom.xml
+++ b/cobigen/cobigen-openapiplugin-parent/cobigen-openapiplugin/pom.xml
@@ -3,8 +3,9 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>openapiplugin</artifactId>
   <name>CobiGen - Open API Plug-in</name>
-  <version>1.1.1-SNAPSHOT</version>
+  <version>2.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
+  <description>CobiGen - OpenAPI Plug-in</description>
 
   <parent>
     <groupId>com.devonfw.cobigen</groupId>
@@ -20,13 +21,13 @@
   <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>openapiplugin-model</artifactId>
-      <version>1.7.0-SNAPSHOT</version>
+      <version>${project.version}</version>
     </dependency>
     
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>core-api</artifactId>
-      <version>4.3.0-SNAPSHOT</version>
+      <version>5.0.0</version>
     </dependency>
     <dependency>
       <groupId>com.reprezen.kaizen</groupId>
@@ -43,19 +44,19 @@
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>core-test</artifactId>
-      <version>4.3.0-SNAPSHOT</version>
+      <version>5.0.0</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>core</artifactId>
-      <version>4.3.0-SNAPSHOT</version>
+      <version>5.0.0</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>tempeng-freemarker</artifactId>
-      <version>1.0.1-SNAPSHOT</version>
+      <version>2.0.0</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
