--- a/cobigen-maven/cobigen-maven-plugin/pom.xml
+++ b/cobigen-maven/cobigen-maven-plugin/pom.xml
@@ -6,6 +6,7 @@
   <packaging>maven-plugin</packaging>
   <version>${cobigen.maven.version}</version>
   <name>CobiGen Maven Plugin</name>
+  <description>CobiGen - Maven Integration</description>
 
   <parent>
     <groupId>com.devonfw.cobigen</groupId>
@@ -38,12 +39,12 @@
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>core</artifactId>
-      <version>4.3.0-SNAPSHOT</version>
+      <version>5.0.0</version>
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>core-api</artifactId>
-      <version>4.3.0-SNAPSHOT</version>
+      <version>5.0.0</version>
     </dependency>
 
     <!-- dependencies to annotations -->
