--- a/cobigen-maven/cobigen-maven-test/pom.xml
+++ b/cobigen-maven/cobigen-maven-test/pom.xml
@@ -6,6 +6,7 @@
   <packaging>jar</packaging>
   <version>${cobigen.maven.version}</version>
   <name>CobiGen Maven - Test Utils</name>
+  <description>CobiGen - Maven Test Utils</description>
 
   <parent>
     <groupId>com.devonfw.cobigen</groupId>
@@ -27,7 +28,7 @@
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>core-test</artifactId>
-      <version>4.3.0-SNAPSHOT</version>
+      <version>5.0.0</version>
     </dependency>
   </dependencies>
 
