--- a/cobigen-eclipse/cobigen-eclipse-test/pom.xml
+++ b/cobigen-eclipse/cobigen-eclipse-test/pom.xml
@@ -21,7 +21,7 @@
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>core-test</artifactId>
-      <version>4.3.0-SNAPSHOT</version>
+      <version>5.0.0</version>
     </dependency>
   </dependencies>
 
