--- a/cobigen-maven/cobigen-maven-systemtest/src/test/resources/testdata/systemtest/Oasp4JTemplateTest/TestClassLoadingWithTemplateFolder/pom.xml
+++ b/cobigen-maven/cobigen-maven-systemtest/src/test/resources/testdata/systemtest/Oasp4JTemplateTest/TestClassLoadingWithTemplateFolder/pom.xml
@@ -33,12 +33,12 @@
           <dependency>
             <groupId>com.devonfw.cobigen</groupId>
             <artifactId>tempeng-freemarker</artifactId>
-            <version>1.0.1-SNAPSHOT</version>
+            <version>2.0.0</version>
           </dependency>
           <dependency>
             <groupId>com.devonfw.cobigen</groupId>
             <artifactId>javaplugin</artifactId>
-            <version>1.7.0-SNAPSHOT</version>
+            <version>2.0.0</version>
           </dependency>
         </dependencies>
       </plugin>
