--- a/cobigen-templates/templates-oasp4j/pom.xml
+++ b/cobigen-templates/templates-oasp4j/pom.xml
@@ -3,7 +3,7 @@
   xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <artifactId>templates-oasp4j</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>2.4.0-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>CobiGen OASP4J Templates</name>
 
@@ -23,7 +23,7 @@
       <artifactId>commons-lang3</artifactId>
       <version>3.5</version>
     </dependency>
-    
+
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>maven-test</artifactId>
@@ -32,6 +32,16 @@
     </dependency>
   </dependencies>
 
+  <profiles>
+    <profile>
+      <activation>
+        <property>
+          <name>maven.test.skip</name>
+          <value>true</value>
+        </property>
+      </activation>
+    </profile>
+  </profiles>
   <build>
     <plugins>
       <!-- Inject Maven Properties in java-templates source folder -->
