--- a/cobigen/cobigen-openapiplugin-parent/cobigen-openapiplugin/pom.xml
+++ b/cobigen/cobigen-openapiplugin-parent/cobigen-openapiplugin/pom.xml
@@ -9,7 +9,7 @@
 
   <parent>
     <groupId>com.devonfw.cobigen</groupId>
-    <artifactId>parent</artifactId>
+    <artifactId>openapiplugin-parent</artifactId>
     <version>dev-SNAPSHOT</version>
   </parent>
 
