--- a/cobigen-eclipse/cobigen-eclipse-test/build.properties
+++ b/cobigen-eclipse/cobigen-eclipse-test/build.properties
@@ -6,5 +6,5 @@ bin.includes = .,\
                lib/jcl-over-slf4j-1.7.21.jar,\
                lib/log4j-over-slf4j-1.7.21.jar,\
                lib/slf4j-api-1.7.21.jar,\
-               lib/core-test-4.3.0-SNAPSHOT.jar,\
-               lib/assertj-core-3.8.0.jar
+               lib/assertj-core-3.8.0.jar,\
+               lib/core-test-5.0.0.jar
