--- a/cobigen-maven/cobigen-maven-systemtest/src/test/resources/testdata/systemtest/Oasp4JTemplateTest/TestPackageInputDataaccessGeneration/pom.xml
+++ b/cobigen-maven/cobigen-maven-systemtest/src/test/resources/testdata/systemtest/Oasp4JTemplateTest/TestPackageInputDataaccessGeneration/pom.xml
@@ -33,27 +33,27 @@
           <dependency>
             <groupId>com.devonfw.cobigen</groupId>
             <artifactId>templates-oasp4j</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>2.4.0-SNAPSHOT</version>
           </dependency>
           <dependency>
             <groupId>com.devonfw.cobigen</groupId>
             <artifactId>tempeng-freemarker</artifactId>
-            <version>1.0.1-SNAPSHOT</version>
+            <version>2.0.0</version>
           </dependency>
           <dependency>
             <groupId>com.devonfw.cobigen</groupId>
             <artifactId>javaplugin</artifactId>
-            <version>1.7.0-SNAPSHOT</version>
+            <version>2.0.0</version>
           </dependency>
           <dependency>
             <groupId>com.devonfw.cobigen</groupId>
             <artifactId>xmlplugin</artifactId>
-            <version>3.2.0-SNAPSHOT</version>
+            <version>4.0.0</version>
           </dependency>
           <dependency>
             <groupId>com.devonfw.cobigen</groupId>
             <artifactId>openapiplugin</artifactId>
-            <version>1.1.1-SNAPSHOT</version>
+            <version>2.0.0-SNAPSHOT</version>
           </dependency>
         </dependencies>
       </plugin>
