--- a/cobigen-templates/templates-oasp4j/src/test/resources/testdata/templatetest/TestAllTemplatesOpenApiInput/pom.xml
+++ b/cobigen-templates/templates-oasp4j/src/test/resources/testdata/templatetest/TestAllTemplatesOpenApiInput/pom.xml
@@ -61,6 +61,11 @@
             <artifactId>openapiplugin</artifactId>
             <version>1.1.1-SNAPSHOT</version>
           </dependency>
+          <dependency>
+            <groupId>com.devonfw.cobigen</groupId>
+            <artifactId>xmlplugin</artifactId>
+            <version>4.0.0-SNAPSHOT</version>
+          </dependency>
         </dependencies>
       </plugin>
     </plugins>
