--- a/cobigen-templates/templates-oasp4js/pom.xml
+++ b/cobigen-templates/templates-oasp4js/pom.xml
@@ -3,9 +3,10 @@
   xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <artifactId>templates-oasp4js</artifactId>
-  <version>2.4.0-SNAPSHOT</version>
+  <version>2.4.0</version>
   <packaging>jar</packaging>
   <name>CobiGen OASP4JS Templates</name>
+  <description>CobiGen OASP4JS Templates</description>
 
   <parent>
     <groupId>com.devonfw.cobigen</groupId>
@@ -35,17 +36,4 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-
-  <build>
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.1</version>
-        <configuration>
-          <source>${java.version}</source>
-          <target>${java.version}</target>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
 </project>
