--- a/cobigen-templates/templates-oasp4js/pom.xml
+++ b/cobigen-templates/templates-oasp4js/pom.xml
@@ -3,7 +3,7 @@
   xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <artifactId>templates-oasp4js</artifactId>
-  <version>2.4.0</version>
+  <version>2.4.1-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>CobiGen OASP4JS Templates</name>
   <description>CobiGen OASP4JS Templates</description>
