--- a/cobigen-templates/templates-oasp4j/src/test/resources/testdata/templatetest/TestAllTemplatesOpenApiInput/pom.xml
+++ b/cobigen-templates/templates-oasp4j/src/test/resources/testdata/templatetest/TestAllTemplatesOpenApiInput/pom.xml
@@ -34,32 +34,37 @@
           <dependency>
             <groupId>com.devonfw.cobigen</groupId>
             <artifactId>tempeng-freemarker</artifactId>
-            <version>1.0.1-SNAPSHOT</version>
+            <version>2.0.0</version>
           </dependency>
           <dependency>
             <groupId>com.devonfw.cobigen</groupId>
             <artifactId>javaplugin</artifactId>
-            <version>1.7.0-SNAPSHOT</version>
+            <version>2.0.0</version>
           </dependency>
           <dependency>
             <groupId>com.devonfw.cobigen</groupId>
             <artifactId>htmlplugin</artifactId>
-            <version>1.1.1-SNAPSHOT</version>
+            <version>2.0.0</version>
           </dependency>
           <dependency>
             <groupId>com.devonfw.cobigen</groupId>
             <artifactId>tsplugin</artifactId>
-            <version>1.2.0-SNAPSHOT</version>
+            <version>2.0.0</version>
           </dependency>
           <dependency>
             <groupId>com.devonfw.cobigen</groupId>
             <artifactId>jsonplugin</artifactId>
-            <version>1.2.1-SNAPSHOT</version>
+            <version>2.0.0</version>
           </dependency>
           <dependency>
             <groupId>com.devonfw.cobigen</groupId>
             <artifactId>openapiplugin</artifactId>
-            <version>1.1.1-SNAPSHOT</version>
+            <version>2.0.0</version>
+          </dependency>
+          <dependency>
+            <groupId>com.devonfw.cobigen</groupId>
+            <artifactId>xmlplugin</artifactId>
+            <version>4.0.0</version>
           </dependency>
         </dependencies>
       </plugin>
