--- a/cobigen-templates/templates-oasp4j/pom.xml
+++ b/cobigen-templates/templates-oasp4j/pom.xml
@@ -6,7 +6,7 @@
   <version>2.4.1-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>CobiGen OASP4J Templates</name>
-  <description >CobiGen OASP4J Templates</description>
+  <description>CobiGen OASP4J Templates</description>
 
   <parent>
     <groupId>com.devonfw.cobigen</groupId>
@@ -19,6 +19,11 @@
   </properties>
 
   <dependencies>
+    <dependency>
+      <groupId>javax.ws.rs</groupId>
+      <artifactId>javax.ws.rs-api</artifactId>
+      <version>2.0</version>
+    </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
