--- a/cobigen-templates/templates-oasp4j/src/test/resources/testdata/templatetest/TestAllTemplatesToInput/pom.xml
+++ b/cobigen-templates/templates-oasp4j/src/test/resources/testdata/templatetest/TestAllTemplatesToInput/pom.xml
@@ -2,8 +2,16 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.devonfw.cobigen</groupId>
-  <artifactId>Oasp4JTemplateTest-TestAllTemplatesOpenAPIInput</artifactId>
+  <artifactId>Oasp4JTemplateTest-TestAllTemplatesToInput</artifactId>
   <version>dev-SNAPSHOT</version>
+
+  <dependencies>
+    <dependency>
+      <groupId>io.swagger</groupId>
+      <artifactId>swagger-annotations</artifactId>
+      <version>1.5.19</version>
+    </dependency>
+  </dependencies>
 
   <build>
     <plugins>
@@ -23,7 +31,8 @@
         <configuration>
           <configurationFolder>${templatesProject}</configurationFolder>
           <inputFiles>
-            <inputFile>OpenAPI.yaml</inputFile>
+            <inputFile>src/main/java/io/github/devonfw/cobigen/generator/service/api/rest/InputNoAnnotationsTo.java</inputFile>
+            <inputFile>src/main/java/io/github/devonfw/cobigen/generator/service/api/rest/InputTo.java</inputFile>
           </inputFiles>
           <templates>
             <template>ALL</template>
@@ -43,28 +52,13 @@
           </dependency>
           <dependency>
             <groupId>com.devonfw.cobigen</groupId>
-            <artifactId>htmlplugin</artifactId>
-            <version>2.0.0</version>
-          </dependency>
-          <dependency>
-            <groupId>com.devonfw.cobigen</groupId>
-            <artifactId>tsplugin</artifactId>
-            <version>2.0.0</version>
-          </dependency>
-          <dependency>
-            <groupId>com.devonfw.cobigen</groupId>
-            <artifactId>jsonplugin</artifactId>
-            <version>2.0.0</version>
+            <artifactId>xmlplugin</artifactId>
+            <version>4.0.0</version>
           </dependency>
           <dependency>
             <groupId>com.devonfw.cobigen</groupId>
             <artifactId>openapiplugin</artifactId>
             <version>2.0.0</version>
-          </dependency>
-          <dependency>
-            <groupId>com.devonfw.cobigen</groupId>
-            <artifactId>xmlplugin</artifactId>
-            <version>4.0.0</version>
           </dependency>
           <dependency>
             <groupId>com.devonfw.cobigen</groupId>
@@ -75,5 +69,4 @@
       </plugin>
     </plugins>
   </build>
-
 </project>
