--- a/cobigen-templates/templates-oasp4j/application.properties
+++ b/cobigen-templates/templates-oasp4j/application.properties
@@ -1,3 +1,5 @@
+# THIS IS A TEST FILE!!!!!!!!!    DO NOT INCLUDE IN DEPLOYMENT
+# THIS IS A TEST FILE!!!!!!!!!    DO NOT INCLUDE IN DEPLOYMENT
 # This is the configuration file shipped with the application that contains reasonable defaults.
 # Environment specific configurations are configured in config/application.properties.
 # If you are running in a servlet container you may add this to lib/config/application.properties in case you do not
