--- a/cobigen-eclipse/cobigen-eclipse/.classpath
+++ b/cobigen-eclipse/cobigen-eclipse/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="lib/core-5.0.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/core-api-5.0.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/core-5.0.0.jar" sourcepath="/core"/>
+	<classpathentry exported="true" kind="lib" path="lib/core-api-5.0.0.jar" sourcepath="/core-api"/>
 	<classpathentry exported="true" kind="lib" path="lib/javaplugin-model-2.0.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
