#659 Reconfigured failing test

--- a/cobigen-templates/templates-oasp4j/.project
+++ b/cobigen-templates/templates-oasp4j/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>CobiGen_Templates</name>
+	<name>CobiGen_Templates_updated_templates</name>
 	<comment></comment>
 	<projects>
 	</projects>
