--- a/cobigen-templates/templates-oasp4j/pom.xml
+++ b/cobigen-templates/templates-oasp4j/pom.xml
@@ -24,5 +24,11 @@
       <artifactId>commons-lang3</artifactId>
       <version>3.5</version>
     </dependency>
+    
+    <dependency>
+      <groupId>xerces</groupId>
+      <artifactId>xercesImpl</artifactId>
+      <version>2.11.0</version>
+    </dependency>
   </dependencies>
 </project>
