#674 modified input reader so it uses the names of the entity if it is a reference, instead of using the type when extracting parameters/responses of a path that have an entity as input/output

--- a/cobigen/cobigen-openapiplugin-parent/cobigen-openapiplugin/src/test/resources/testdata/unittest/OpenAPIInputReaderTest/two-components.yaml
+++ b/cobigen/cobigen-openapiplugin-parent/cobigen-openapiplugin/src/test/resources/testdata/unittest/OpenAPIInputReaderTest/two-components.yaml
@@ -38,7 +38,18 @@ paths:
         - name: amount
           in: path
           schema:
-            type: array
+            $ref: '#/components/schemas/Table'
+      responses:
+        '200':
+          description: Any
+  /salemanagement/v1/sale/{bla}:
+    get:
+      operationId: findSale
+      parameters:
+        - name: bla
+          in: path
+          schema:
+            type: integer
             format: int64
             minimum: 10
             maximum: 200
