--- a/cobigen-eclipse/pom.xml
+++ b/cobigen-eclipse/pom.xml
@@ -15,6 +15,7 @@
   <properties>
     <tycho.version>1.2.0</tycho.version>
     <tycho-repo.url>https://oss.sonatype.org/content/groups/public/</tycho-repo.url>
+    <attach.source.javadoc.build>false</attach.source.javadoc.build>
   </properties>
 
   <modules>
