Adding .ftl to gitattributes

--- a/.gitattributes
+++ b/.gitattributes
@@ -24,6 +24,7 @@
 *.tagx          text
 *.xml           text
 *.yml           text
+*.ftl           text
 
 # These files are binary and should be left untouched
 # (binary is a macro for -text -diff)
