--- a/cobigen/cobigen-tsplugin/src/main/resources/META-INF/externalservers/server.properties
+++ b/cobigen/cobigen-tsplugin/src/main/resources/META-INF/externalservers/server.properties
@@ -3,3 +3,4 @@ server.name=${server.name}
 server.version=${server.version}
 server.url=${server.url}
 server.url.linux=${server.url.linux}
+server.url.macos=${server.url.macos}
