--- a/cobigen-cli/src/test/resources/testdata/localmavenproject/maven.project/api/pom.xml
+++ b/cobigen-cli/src/test/resources/testdata/localmavenproject/maven.project/api/pom.xml
@@ -19,4 +19,19 @@
     </dependency>
   </dependencies>
 
+    <profiles>
+      <profile>
+      <!-- separate eclipse build from command-line... -->
+      <id>eclipse</id>
+      <activation>
+        <property>
+          <name>eclipse.application</name>
+        </property>
+      </activation>
+      <build>
+        <directory>eclipse-target</directory>
+      </build>
+    </profile>
+  </profiles>
+
 </project>
