--- a/cobigen-cli/src/test/resources/testdata/localmavenproject/maven.project/core/pom.xml
+++ b/cobigen-cli/src/test/resources/testdata/localmavenproject/maven.project/core/pom.xml
@@ -20,6 +20,21 @@
       <artifactId>persistence-api</artifactId>
       <version>1.0.2</version>
     </dependency>
-
   </dependencies>
+
+  <profiles>
+      <profile>
+      <!-- separate eclipse build from command-line... -->
+      <id>eclipse</id>
+      <activation>
+        <property>
+          <name>eclipse.application</name>
+        </property>
+      </activation>
+      <build>
+        <directory>eclipse-target</directory>
+      </build>
+    </profile>
+  </profiles>
+
 </project>
