#935 Updating the pom file for pdf documentation generation

--- a/documentation/pom.xml
+++ b/documentation/pom.xml
@@ -14,7 +14,7 @@
   </parent>
 
   <properties>
-    <docgen.wiki.page>CobiGen</docgen.wiki.page>
+    <docgen.wiki.page>master-cobigen</docgen.wiki.page>
     <docgen.asciidoc.pdf.stylesdir>./theme</docgen.asciidoc.pdf.stylesdir>
   </properties>
 
