--- a/cobigen/cobigen-tsplugin/pom.xml
+++ b/cobigen/cobigen-tsplugin/pom.xml
@@ -63,6 +63,7 @@
       <filtering>false</filtering>
       <excludes>
         <exclude>**/META-INF/externalservers/server.properties</exclude>
+        <exclude>**/META-INF/LICENSEP2BUNDLE.txt</exclude>
       </excludes>
     </resource>
   </resources>
