--- a/cobigen/cobigen-tsplugin/pom.xml
+++ b/cobigen/cobigen-tsplugin/pom.xml
@@ -13,6 +13,7 @@
   </parent>
 
   <properties>
+    <plugin.name>${project.artifactId}</plugin.name>
     <server.name>nestserver</server.name>
     <server.version>1.1.1</server.version>
     <server.url>https\://registry.npmjs.org/@devonfw/cobigen-nestserver/-/cobigen-nestserver-${server.version}.tgz</server.url>
